--- a/src/003b_spacy_investigate_pos.py.ipynb
+++ b/src/003b_spacy_investigate_pos.py.ipynb
@@ -35,15 +35,15 @@
     "from pathlib import Path\n",
     "\n",
     "# load data and obesity names\n",
-    "filesdf = pd.read_pickle(\"../200_data_clean/filesdf.pickle\")\n",
+    "corpusdf = pd.read_pickle(\"../200_data_clean/corpusdf.pickle\")\n",
     "# drop unneccessary columns\n",
-    "filesdf = filesdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'numeric_month'], axis=1)\n",
+    "corpusdf = corpusdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'numeric_month'], axis=1)\n",
     "# and make a key: date_source_fourdigitcode\n",
     "sentencenlp = pd.read_pickle(\"sentencenlp.pkl\")\n",
     "obesitynames = obesitylist()\n",
     "\n",
-    "filesdf = filesdf.assign(sentencenlp=sentencenlp)\n",
-    "filesdf = filesdf.assign(articlesummary=filesdf['sentencenlp'].map(lambda x: explore_tokens(x, obesitynames=obesitynames)))\n"
+    "corpusdf = corpusdf.assign(sentencenlp=sentencenlp)\n",
+    "corpusdf = corpusdf.assign(articlesummary=corpusdf['sentencenlp'].map(lambda x: explore_tokens(x, obesitynames=obesitynames)))\n"
    ]
   },
   {
@@ -53,21 +53,21 @@
    "source": [
     "lst_col = 'articlesummary'\n",
     "# pivot article summary longer\n",
-    "filesdf = pd.DataFrame({col:np.repeat(filesdf[col].values, filesdf[lst_col].str.len())for col in filesdf.columns.difference([lst_col]) }).assign(**{lst_col:np.concatenate(filesdf[lst_col].values)})[filesdf.columns.tolist()]\n",
+    "corpusdf = pd.DataFrame({col:np.repeat(corpusdf[col].values, corpusdf[lst_col].str.len())for col in corpusdf.columns.difference([lst_col]) }).assign(**{lst_col:np.concatenate(corpusdf[lst_col].values)})[corpusdf.columns.tolist()]\n",
     "# now each row has a dict with 7 keys\n",
-    "filesdf = pd.concat([filesdf.drop([lst_col], axis=1), filesdf[lst_col].apply(pd.Series)], axis=1)\n",
+    "corpusdf = pd.concat([corpusdf.drop([lst_col], axis=1), corpusdf[lst_col].apply(pd.Series)], axis=1)\n",
     "# and now that dict has been split into 7 columns\n",
     "\n",
     "# clean up capitalisation\n",
-    "filesdf[\"text\"] = filesdf[\"text\"].str.lower()\n",
-    "filesdf[\"left\"] = filesdf[\"left\"].str.lower()\n",
-    "filesdf[\"right\"] = filesdf[\"right\"].str.lower()\n",
-    "filesdf.columns\n",
-    "filesdf[\"headword\"] = filesdf[\"head\"].apply(lambda x: x.orth_)\n",
-    "filesdf[\"headword\"] = filesdf[\"headword\"].str.lower()\n",
-    "filesdf.drop('head', inplace=True, axis=1)\n",
+    "corpusdf[\"text\"] = corpusdf[\"text\"].str.lower()\n",
+    "corpusdf[\"left\"] = corpusdf[\"left\"].str.lower()\n",
+    "corpusdf[\"right\"] = corpusdf[\"right\"].str.lower()\n",
+    "corpusdf.columns\n",
+    "corpusdf[\"headword\"] = corpusdf[\"head\"].apply(lambda x: x.orth_)\n",
+    "corpusdf[\"headword\"] = corpusdf[\"headword\"].str.lower()\n",
+    "corpusdf.drop('head', inplace=True, axis=1)\n",
     "# write out to csv file\n",
-    "filesdf.drop(['body', 'metadata', 'sentencenlp'], axis=1).to_csv(\"../300_data_processed/pos_annotated_with_spacy.csv\")"
+    "corpusdf.drop(['body', 'metadata', 'sentencenlp'], axis=1).to_csv(\"../300_data_processed/pos_annotated_with_spacy.csv\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "filesdf.groupby(['text']).tag.value_counts().unstack().fillna(0)"
+    "corpusdf.groupby(['text']).tag.value_counts().unstack().fillna(0)"
    ],
    "metadata": {
     "collapsed": false,
@@ -220,7 +220,7 @@
     "                                           columns= ['explanation'])\n",
     "spacy_explanation['dep'] = spacy_explanation.index\n",
     "\n",
-    "tmpdf = filesdf.groupby(['text']).dep.value_counts().unstack().fillna(0).transpose()\n",
+    "tmpdf = corpusdf.groupby(['text']).dep.value_counts().unstack().fillna(0).transpose()\n",
     "tmpdf['text'] = tmpdf.index\n",
     "mergeddf = pd.merge(tmpdf, spacy_explanation, how='left',left_on='text', right_on='dep')\n",
     "collist = mergeddf.columns.to_list()[-3:-1] +  mergeddf.columns.to_list()[0:-3]\n",
@@ -250,7 +250,7 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "obese_amod = filesdf[(filesdf['dep']=='amod') & (filesdf['text']=='obese')]"
+    "obese_amod = corpusdf[(corpusdf['dep']=='amod') & (corpusdf['text']=='obese')]"
    ],
    "metadata": {
     "collapsed": false,
