--- a/src/004_topicmodelling.ipynb
+++ b/src/004_topicmodelling.ipynb
@@ -74,9 +74,9 @@
    "outputs": [],
    "source": [
     "# load data and obesity names\n",
-    "filesdf = pd.read_pickle(\"../200_data_clean/filesdf.pickle\")\n",
+    "corpusdf = pd.read_pickle(\"../200_data_clean/corpusdf.pickle\")\n",
     "# drop unneccessary columns\n",
-    "filesdf = filesdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'numeric_month'], axis=1)\n",
+    "corpusdf = corpusdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'numeric_month'], axis=1)\n",
     "\n"
    ],
    "metadata": {
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Convert body to list\n",
-    "bodies = filesdf.body.values.tolist()\n",
+    "bodies = corpusdf.body.values.tolist()\n",
     "\n",
     "# Remove new line characters\n",
     "bodies = [re.sub('\\s+', ' ', sent) for sent in bodies]\n",
