--- a/src/004_topicmodelling.ipynb
+++ b/src/004_topicmodelling.ipynb
@@ -76,7 +76,7 @@
     "# load data and obesity names\n",
     "corpusdf = pd.read_pickle(\"../200_data_clean/corpusdf.pickle\")\n",
     "# drop unneccessary columns\n",
-    "corpusdf = corpusdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'numeric_month'], axis=1)\n",
+    "corpusdf = corpusdf.drop(['filename', 'encoding', 'confidence', 'fullpath','year', 'original_numeric_month'], axis=1)\n",
     "\n"
    ],
    "metadata": {
